--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="https://js.arcgis.com/4.11/dijit/themes/claro/claro.css">
+	<link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/themes/light/main.css">
+
 </head>
 <body>
   <app-root></app-root>
